Stylized webpage to resemble dark calculator; fixed bug with dot not working after clearing; adjusted truncation

--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,21 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(49, 49, 49);
+    background-color: rgb(35, 35, 35);
 }
 
 button {
     width: 60px;
     height: 80px;
     font-size: 20px;
+    background-color: rgb(25, 25, 25);
+    color: white;
+    border-radius: 4px;
+    border-color: #606060 #747474 #747474 #606060;
+}
+
+button:hover {
+    background-color: rgb(50, 50, 50);
 }
 
 button#backspace,
@@ -21,22 +29,29 @@ button#equals {
 }
 
 .calculator {
-    background-color: rgb(217, 217, 217);
+    background-color: rgb(0, 0, 0);
     width: 300px;
     height: 540px;
     display: flex;
     flex-direction: column;
+    border: 2px solid white;
+    border-radius: 4px;
+    box-shadow: 
+    rgba(0, 0, 0, 1) 0px 20px 60px,
+    rgba(0, 0, 0, 0.95) 0px 40px 120px;
+
 }
 
 .display {
-    border: 2px solid purple;
+    border: 2px solid rgb(255, 255, 255);
     margin: 10px 10px;
     padding: 5px 5px;
-    background-color: rgb(220, 200, 255);
-    color: black;
+    background-color: rgb(180, 180, 180);
+    color: rgb(0, 0, 0);
     text-align: right;
     font-size: 30px;
     letter-spacing: 2px;
+    border-radius: 4px;
 }
 
 .buttons-container {
